[package]
name = "nearb-agent"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/data-cartel/ethbrussels"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-contract-standards = "5.2.1"
near-sdk = "5.1.0"
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
plotters = "0.3.6"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.15.0"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
